--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <h1>This is h1 header</h1>
     Hello there, awesome person!
+    <img src="https://avatars2.githubusercontent.com/u/65769927?v=4">
   </body>
 </html>
