Add an unordered list in index.html
Add my favorite sites (unordered list <ul>) in the file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <body>
     <h1>This is h1 header</h1>
     Hello there, awesome person!
+    
     <img src="https://avatars2.githubusercontent.com/u/65769927?v=4">
+    
+    <h1>My favorite sites</h1>
+    <ul>
+      <li>Google</li>
+      <li>GitBub</li>
+      <li>DataCamp</li>
+    </ul>
   </body>
 </html>
