--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     
     <h1>My favorite sites</h1>
     <ul>
-      <li>Google</li>
-      <li>GitBub</li>
-      <li>DataCamp</li>
+      <li><a href="https://google.com">Google</a></li>
+      <li><a href="https://github.com">GitHub</a></li>
+      <li><a href="https://datacamp.com">DataCamp</a></li>
     </ul>
   </body>
 </html>
