--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>My First GitHub Page</title>
     <link rel="stylesheet" href="style.css">
@@ -8,7 +9,7 @@
     <h1>This is h1 header</h1>
     Hello there, awesome person!
     
-    <img src="https://avatars2.githubusercontent.com/u/65769927?v=4">
+    <img src="https://avatars2.githubusercontent.com/u/65769927?v=4" alt="my pic">
     
     <h1>My favorite sites</h1>
     <ul>
